--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
+body {
+  background-image: linear-gradient(to bottom left, skyblue, white)
+}
 
+h1 {
+  color: black
+  text-align:center
+  font-family: helvetica
+  font-size: 250%
+}
+
+p {
+  color: black
+  text-align:center
+  font-family: helvetica
+  font-size: 100%
+}
