--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ h1 {
   text-align:center;
   font-family: helvetica;
   font-size: 250%;
-  border: 5px inset blue
+  border: 5px inset blue;
 }
 
 p.info {
