--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ h1 {
   text-align:center;
   font-family: helvetica;
   font-size: 250%;
-  border: 5px inset blue;
+  border: 1px inset black;
+  background-image: linear-gradient(to bottom left, red, orange);
 }
 
 p.info {
