--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ h1 {
   font-family: helvetica;
   font-size: 250%;
   border: 1px inset black;
-  background-color: white
-    opacity: 0.3
+  background-color: white;
+    opacity: 0.3;
 }
 
 p.info {
