--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ h1 {
   text-align:center;
   font-family: helvetica;
   font-size: 250%;
-  border: 1px inset black;
+  border: 4px ridge purple
+    opacity: 0.3
   background-color: white;
     opacity: 0.3;
 }
@@ -18,7 +19,7 @@ p.info {
   text-align:center;
   font-family: helvetica;
   font-size: 100%;
-  border: 3px ridge purple;
+  border-left: 3px ridge purple;
     opacity: 0.3;
 }
 
