--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   background-image: linear-gradient(to bottom left, skyblue, white);
-  opacity: 0.5;
+  background-opacity: 0.5;
 }
 
 h1 {
@@ -19,7 +19,7 @@ p.info {
   font-family: helvetica;
   font-size: 100%;
   border-left: 3px ridge purple;
-  margin-left: 80px
+  margin-left: 80px;
 }
 
 p.right {
