--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,7 @@ h1 {
   text-align:center;
   font-family: helvetica;
   font-size: 250%;
-  border: 4px ridge purple;
-  background-color: white;
-  background-opacity: 0.3;
+  border-bottom: 1px solid white;
 }
 
 p.info {
