--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ h1 {
   text-align:center;
   font-family: helvetica;
   font-size: 250%;
+  text-shadow: 4px 4px 2px skyblue
 }
 
 p.info {
@@ -15,8 +16,9 @@ p.info {
   font-family: helvetica;
   font-size: 100%;
   border-left: 2px solid white;
-  text-align:center;
+  text-align:left;
   margin-left: 40%;
   margin-right: 40%;
+  text-shadow: 4px 4px 2px skyblue
   
 }
