--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@
 body {
   background-color: skyblue;
   opacity 0.5;
+  background-position: right bottom, left top;
+  background-repeat: no-repeat;
   animation-name: b;
   animation-duration: 10s;
   animation-iteration-count: infinite;
