--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 @keyframes b {
-  from {background-color: skyblue;}
-  to {background-color: white;}
+  0% {background-image: linear-gradient(to bottom left, skyblue, white);}
+  50% {background-image: linear-gradient(to bottom left, white, skyblue);}
+  100% {background-image: linear-gradient(to bottom left, skyblue, white);}
 } 
 
 body {
-  background-color: skyblue;
+  background-image: linear-gradient(to bottom left, skyblue, white);
   opacity 0.5;
   background-position: right bottom, left top;
   background-repeat: no-repeat;
@@ -40,7 +41,7 @@ p.info {
   font-family: helvetica;
   font-size: 100%;
   border-left: 2px solid white;
-  text-align:left;
+  text-align:center;
   margin-left: 40%;
   margin-right: 40%;
   text-shadow: 2px 2px 1px skyblue;
