--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,11 @@
 
 html {
   background-image: linear-gradient(to bottom right, skyblue, white);
-  opacity 0.5;
   background-size: 400% 400%;
   animation: b 15s ease infinite;
 }
 
-@keyframes header {
+@keyframes hea {
   from {font-size: 100%;}
   to {font-size: 250%;}
 }
@@ -27,7 +26,7 @@ h1 {
   font-family: helvetica;
   font-size: 100%;
   text-shadow: 4px 4px 2px skyblue;
-  animation-name: header;
+  animation-name: hea;
   animation-duration: 5s;
   animation-delay: 0s;
   animation-fill-mode: both;
