--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-	background-color: skyblue
+	background-color: skyblue;
 	background-size: cover;
 	background-repeat: no-repeat;
 	animation: gradient 30s ease infinite;
