--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,12 @@ body {
 	background-color: skyblue;
 	background-size: cover;
 	background-repeat: no-repeat;
-	animation: gradient 30s ease infinite;
+	animation: gradient 15s ease infinite;
 }
 
 @keyframes gradient {
 	0% {background-color: skyblue;}
-	25% {background-color: yellow;}
-	50% {background-color: rgb(181, 31, 61);}
-	75% {background-color: rgb(29, 0, 54);}
+	50% {background-color: rgb(29, 0, 54);}
 	100% {background-color: skyblue;}
 }
 
@@ -23,7 +21,7 @@ h1 {
   text-align:center;
   font-family: helvetica;
   font-size: 100%;
-  text-shadow: 2px 4px 2px skyblue;
+  text-shadow: 2px 2px 2px skyblue;
   animation-name: hea;
   animation-duration: 5s;
   animation-delay: 0s;
@@ -39,11 +37,10 @@ p.info {
   color: white;
   font-family: helvetica;
   font-size: 100%;
-  border-bottom: 2px solid white;
+  border-left: 2px solid white;
   text-align:center;
   margin-left: 40%;
   margin-right: 40%;
-  text-shadow: 2px 2px 1px skyblue;
   animation-name: infor;
   animation-duration: 5s;
   animation-delay: 2s;
