--- a/styles.css
+++ b/styles.css
@@ -49,18 +49,17 @@ p.info {
 
 .button {
   background-color: none;
-  border: none;
+  border: 2px solid white;
   text-color: white;
-  padding: 15px 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 10px;
   transition-duration: 0.4s;
-  border-radius: 12px
+  border-radius: 12px;
 }
 
 .button:hover {
-  background-color: black;
+  background-color: rgb(29, 0, 54);
   text-color: white;
 }
