--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h1 {
 }
 
 @keyframes infor {
-  from {top: 30px; opacity: 0; font-size: 80%;}
+  from {top: 60px; opacity: 0; font-size: 80%;}
   to {top: 0px; opacity: 100; font-size: 100%;}
 }
 
@@ -42,7 +42,7 @@ p.info {
   margin-left: 40%;
   margin-right: 40%;
   animation-name: infor;
-  animation-duration: 5s;
+  animation-duration: 6s;
   animation-delay: 2s;
   animation-fill-mode: both; 
 }
@@ -57,6 +57,14 @@ p.info {
   font-size: 10px;
   transition-duration: 0.4s;
   border-radius: 12px;
+  animation-name: prono;
+  animation-duration: 6;
+  animation-delay: 3s;
+}
+
+@keyframe prono {
+	from {top: 90px; opacity: 0;}
+  	to {top: 0px; opacity: 100;}
 }
 
 .button:hover {
