--- a/styles.css
+++ b/styles.css
@@ -46,49 +46,35 @@ p.info {
   animation-fill-mode: both; 
 }
 
-.button1 {
-  background-color: none;
-  border: 2px solid white;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 10px;
-  transition-duration: 0.4s;
-  border-radius: 12px;
-}
-.button2 {
-  background-color: none;
-  border: 2px solid white;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 10px;
-  transition-duration: 0.4s;
-  border-radius: 12px;
-}
-.button3 {
-  background-color: none;
-  border: 2px solid white;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 10px;
-  transition-duration: 0.4s;
-  border-radius: 12px;
+.button {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
 }
 
-.button1:hover {
+.button:hover {
   background-color: rgb(186, 219, 255);
   color: rgb(0, 123, 255);
 }
-.button2:hover {
+
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+
+.button1:hover {
   background-color: rgb(255, 249, 186);
   color: rgb(255, 233, 0);
 }
-.button3:hover {
+
+.button2 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+
+.button2:hover {
   background-color: rgb(255, 189, 216);
   color: rgb(255, 0, 104);
 }
