--- a/styles.css
+++ b/styles.css
@@ -47,49 +47,48 @@ p.info {
 }
 
 .button {
-  background-color: none;
+  background-color: none; 
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 16px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-}
-
-.button:hover {
-  background-color: rgb(186, 219, 255);
-  color: rgb(0, 123, 255);
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
 }
 
 .button1 {
   background-color: none;
-  border: none;
+  border: 2px solid black;
   color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
 }
 
 .button1:hover {
-  background-color: rgb(255, 249, 186);
-  color: rgb(255, 233, 0);
+  background-color: rgb(186, 219, 255);
+  color: rgb(0, 123, 255);
 }
 
 .button2 {
   background-color: none;
-  border: none;
+  border: 2px solid black;
   color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
 }
 
 .button2:hover {
+  background-color: rgb(255, 249, 186);
+  color: rgb(255, 233, 0);
+} 
+
+.button2 {
+  background-color: none;
+  border: 2px solid black;
+  color: white;
+}
+
+.button3:hover {
   background-color: rgb(255, 189, 216);
   color: rgb(255, 0, 104);
 }
