--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,9 @@ p.info {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 2px 1px;
+  width: 40%;
+  margin-left: 30%;
+  margin-right: 30%
   transition-duration: 0.4s;
   cursor: pointer;
   border-radius: 12px;
