--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ p.info {
 }
 
 .button {
-  background-color: black; 
+  background-color: white; 
   padding: 4px 8px;
   border: 2px solid white;
   color: white;
@@ -55,15 +55,27 @@ p.info {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  width: 40%;
-  margin-left: 30%;
-  margin-right: 30%
+  width: 10%;
+  margin-left: 45%;
+  margin-right: 45%
   transition-duration: 0.4s;
   cursor: pointer;
   border-radius: 12px;
   animation-name: prono;
   animation-duration: 6;
   animation-delay: 3s;
+}
+
+.button1 {
+  color: rgb(186, 219, 255);
+}
+
+.button2 {
+  color: rgb(255, 249, 186);
+}
+
+.button3 {
+  color: rgb(255, 189, 216);
 }
 
 @keyframes prono {
