--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ p.info {
   font-size: 16px;
   width: 10%;
   margin-left: 45%;
-  margin-right: 45%
+  margin-right: 45%;
   transition-duration: 0.4s;
   cursor: pointer;
   border-radius: 12px;
@@ -68,19 +68,28 @@ p.info {
 
 .button1 {
   color: rgb(186, 219, 255);
+  animation-name: prono;
+  animation-duration: 6;
+  animation-delay: 3s;
 }
 
 .button2 {
   color: rgb(255, 249, 186);
+  animation-name: prono;
+  animation-duration: 6;
+  animation-delay: 3s;
 }
 
 .button3 {
   color: rgb(255, 189, 216);
+  animation-name: prono;
+  animation-duration: 6;
+  animation-delay: 3s;
 }
 
 @keyframes prono {
-	from {top: 90px; opacity: 0;}
-  	to {top: 0px; opacity: 100;}
+	from {opacity: 0;}
+  	to {opacity: 100;}
 }
 
 .button1:hover {
