--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,10 @@ p.info {
   width: 10%;
   margin-left: 45%;
   margin-right: 45%;
+  margin-bottom: 5px;
   transition-duration: 0.4s;
   cursor: pointer;
-  border-radius: 12px;
+  border-radius: 15px;
   animation-name: prono;
   animation-duration: 6;
   animation-delay: 3s;
@@ -95,14 +96,23 @@ p.info {
 .button1:hover {
   background-color: rgb(186, 219, 255);
   color: rgb(0, 123, 255);
+  padding: 6px 10px;
+  border: 3px solid white;
+  font-size: 18px;
 }
 
 .button2:hover {
   background-color: rgb(255, 249, 186);
   color: rgb(255, 233, 0);
+  padding: 6px 10px;
+  border: 3px solid white;
+  font-size: 18px;
 } 
 
 .button3:hover {
   background-color: rgb(255, 189, 216);
   color: rgb(255, 0, 104);
+  padding: 6px 10px;
+  border: 3px solid white;
+  font-size: 18px;
 }
