--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,19 @@ p.info {
   border: 3px solid white;
   font-size: 18px;
 }
+
+p.output {
+  color: white;
+  font-family: helvetica;
+  font-size: 100%;
+  text-align:center;
+  margin-left: 40%;
+  margin-right: 40%;
+  animation-name: out;
+  animation-duration: 6s;
+  animation-delay: 2s;
+  animation-fill-mode: both; 
+}
+@keyframes out;
+from {opacity:0%;}
+to {opacity:100%;}
