--- a/styles.css
+++ b/styles.css
@@ -103,8 +103,10 @@ p.info {
 p.output {
   color: white;
   font-family: helvetica;
+  font-style: bold;
   font-size: 100%;
   text-align:center;
+  border: 2px solid white;
   margin-left: 40%;
   margin-right: 40%;
   animation-name: out;
