--- a/styles.css
+++ b/styles.css
@@ -103,10 +103,10 @@ p.info {
 p.output {
   color: white;
   font-family: helvetica;
-  font-style: bold;
   font-size: 100%;
   text-align:center;
   border: 2px solid white;
+  padding: 10px 12px;
   margin-left: 40%;
   margin-right: 40%;
   animation-name: out;
@@ -117,7 +117,4 @@ p.output {
 @keyframes out {
 from {font-size:130%;}
 to {font-size:100%;}
-}
-p.output.animated {
-	visibility: visible;
 }
