--- a/styles.css
+++ b/styles.css
@@ -112,9 +112,10 @@ p.output {
   animation-name: out;
   animation-duration: 4s;
   animation-delay: 0s;
-  animation-fill-mode: both; 
+  animation-fill-mode: forwards; 
+  visibility: hidden;
 }
 @keyframes out {
-from {font-size:130%;}
-to {font-size:100%;}
+from {font-size:130%; visibility:hidden; opacity:0;}
+to {font-size:100%; visibility:visible; opacity:100%;}
 }
