--- a/styles.css
+++ b/styles.css
@@ -115,10 +115,12 @@ p.output {
   animation-fill-mode: forwards; 
   visibility: hidden;
 }
+
 @keyframes out {
 from {font-size:130%; visibility:hidden; opacity:0;}
 to {font-size:100%; visibility:visible; opacity:100%;}
 }
+
 p.last {
   color: white;
   font-family: helvetica;
@@ -127,9 +129,9 @@ p.last {
   animation-name: ende;
   animation-duration: 6s;
   animation-delay: 0s;
-  animation-fill-mode: both; 
+  animation-fill-mode: forwards; 
 }
 @keyframes ende {
-  from {top: 75%; opacity: 0;}
+  from {top: 80%; opacity: 0;}
   to {top: 90%; opacity: 100;}
 }
