--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ p.info {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 100%;
   width: 10%;
   margin-left: 45%;
   margin-right: 45%;
@@ -81,7 +81,7 @@ p.info {
   color: rgb(0, 123, 255);
   padding: 10px 12px;
   border: 3px solid white;
-  font-size: 18px;
+  font-size: 120%;
 }
 
 .button2:hover {
@@ -89,7 +89,7 @@ p.info {
   color: rgb(255, 233, 0);
   padding: 10px 12px;
   border: 3px solid white;
-  font-size: 18px;
+  font-size: 120%;
 } 
 
 .button3:hover {
@@ -97,7 +97,7 @@ p.info {
   color: rgb(255, 0, 104);
   padding: 10px 12px;
   border: 3px solid white;
-  font-size: 18px;
+  font-size: 120%;
 }
 
 p.output {
