--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,10 @@ p.info {
   color: rgb(255, 189, 216);
 }
 
+.button4 {
+  color: rgb(209, 255, 166);
+}
+
 .button1:hover {
   background-color: rgb(186, 219, 255);
   color: rgb(0, 123, 255);
@@ -95,6 +99,14 @@ p.info {
 .button3:hover {
   background-color: rgb(255, 189, 216);
   color: rgb(255, 0, 104);
+  padding: 10px 12px;
+  border: 3px solid white;
+  font-size: 120%;
+}
+
+.button4:hover {
+  background-color: rgb(209, 255, 166);
+  color: rgb(123, 255, 0);
   padding: 10px 12px;
   border: 3px solid white;
   font-size: 120%;
